--- a/urn.net.bosatsu.presentations.2017/content/template/master1.html
+++ b/urn.net.bosatsu.presentations.2017/content/template/master1.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="keywords" content="remark,remarkjs,markdown,slideshow,presentation" />
     <meta name="description" content="A simple, in-browser, markdown-driven slideshow tool." />
-    <title>SHACL</title>
+    <title id="title">$a{arg:title}</title>
     <script src="https://use.fontawesome.com/71690c7f22.js"></script>
     <style>
 	$a{arg:style}
